WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202768
Pages frequently fail to enter the back/forward cache due to frames with a quick redirect coming
https://bugs.webkit.org/show_bug.cgi?id=202768
Summary
Pages frequently fail to enter the back/forward cache due to frames with a qu...
Chris Dumez
Reported
2019-10-09 15:06:46 PDT
Pages frequently fail to enter the back/forward cache due to loading ad frames (e.g. on Yahoo.com). Page cache error is usually "Quick redirect coming".
Attachments
Patch
(5.25 KB, patch)
2019-10-10 14:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.25 KB, patch)
2019-10-10 14:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.46 KB, patch)
2019-10-10 18:40 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-09 15:07:17 PDT
<
rdar://problem/56132022
>
Chris Dumez
Comment 2
2019-10-10 14:49:17 PDT
Created
attachment 380690
[details]
Patch
Chris Dumez
Comment 3
2019-10-10 14:50:42 PDT
Created
attachment 380691
[details]
Patch
Chris Dumez
Comment 4
2019-10-10 18:40:14 PDT
Created
attachment 380712
[details]
Patch
Chris Dumez
Comment 5
2019-10-11 13:26:21 PDT
Comment on
attachment 380712
[details]
Patch Clearing flags on attachment: 380712 Committed
r251019
: <
https://trac.webkit.org/changeset/251019
>
Chris Dumez
Comment 6
2019-10-11 13:26:23 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7
2019-10-11 16:05:54 PDT
Comment on
attachment 380712
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380712&action=review
> Source/WebCore/ChangeLog:24 > + (WebCore::FrameLoader::stopForPageCache): > + Stop policy checks & cancel scheduled navigations after stopping loads. Stopping loads may > + run script which may in theory schedule new navigations. This is hardening.
Since this is hardening, I think It needs a comment; since un-hardening it won’t lead to a test failing, presumably only the comment will prevent us from un-hardening it.
Chris Dumez
Comment 8
2019-10-11 16:25:19 PDT
(In reply to Darin Adler from
comment #7
)
> Comment on
attachment 380712
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=380712&action=review
> > > Source/WebCore/ChangeLog:24 > > + (WebCore::FrameLoader::stopForPageCache): > > + Stop policy checks & cancel scheduled navigations after stopping loads. Stopping loads may > > + run script which may in theory schedule new navigations. This is hardening. > > Since this is hardening, I think It needs a comment; since un-hardening it > won’t lead to a test failing, presumably only the comment will prevent us > from un-hardening it.
Good idea, I will add a comment.
Chris Dumez
Comment 9
2019-10-11 16:29:44 PDT
(In reply to Chris Dumez from
comment #8
)
> (In reply to Darin Adler from
comment #7
) > > Comment on
attachment 380712
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=380712&action=review
> > > > > Source/WebCore/ChangeLog:24 > > > + (WebCore::FrameLoader::stopForPageCache): > > > + Stop policy checks & cancel scheduled navigations after stopping loads. Stopping loads may > > > + run script which may in theory schedule new navigations. This is hardening. > > > > Since this is hardening, I think It needs a comment; since un-hardening it > > won’t lead to a test failing, presumably only the comment will prevent us > > from un-hardening it. > > Good idea, I will add a comment.
Landed in <
https://trac.webkit.org/changeset/251029
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug